--- a/statistics.html
+++ b/statistics.html
@@ -67,6 +67,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
@@ -153,7 +157,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
+<h5><a href='http://uis.applytojob.com/apply/EWLSFp6glf/Security-Monitoring-Solution-Assessment-And-Implementation'>Security monitoring solution - assessment and implementation - UNESCO Institute for Statistics - Career Page</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -183,7 +187,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-31531'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -191,7 +195,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -228,7 +232,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 ??. ????? ... Participate in statistical support for CRF design, database development, data 
 validation plan and blinded data review; - Performs SAS programming to 
@@ -277,7 +281,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.amstat.org/jobs/12931623/tenure-track-teaching-faculty-position-statistics-and-data-science'>Tenure Track Teaching Faculty Position - Statistics and Data Science, Employment | AMSTAT</a></h5> 
+<h5><a href='https://jobs.amstat.org/jobs/12931623/tenure-track-teaching-faculty-position-statistics-and-data-science'>Tenure Track Teaching Faculty Position - Statistics and Data Science, Employment | AMSTAT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -301,7 +305,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -313,7 +317,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -334,7 +338,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p>Sep 27, 2019 ... ... at the Medical School, Quantitative Collaborative (Social Sciences), the newly 
 created School of Data Science, and other departments and schools. Faculty?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -347,7 +351,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/statistical-programmer-mechelen-be-leiden-nl'>
+<h5><a href='https://glpg.recruitee.com/o/statistical-programmer-mechelen-be-leiden-nl'>
       Statistical Programmer - Mechelen, BE / Leiden, NL - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
@@ -389,7 +393,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/financial-statistics-analyst-i-10141'>Financial Statistics Analyst I - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/financial-statistics-analyst-i-10141'>Financial Statistics Analyst I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Washington, D.C.</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -485,10 +489,6 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <hr/>
 <h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistician-31248'>Statistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
-<p>Posted on: 2019-10-03</p>
-<hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31243'>Sr Biostatistician - Syneos Health Careers</a></h5> 
-<p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
 
