--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/cortica/jobs/4498853002'>Job Application for Clinical Director of Speech Therapy at Cortica</a></h5> 
+<p><span class="badge badge-light">Glendale, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
 <p><span class="badge badge-light">Rockford Rockford</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -139,7 +143,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -178,7 +182,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4486380002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Conway, SC</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -325,7 +329,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Katy, TX</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4473701002'>Job Application for Speech Language Pathologist, SLP- Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4473701002'>Job Application for Speech Language Pathologist, SLP- Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -349,7 +353,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4471567002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4471567002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Reading, PA Reading, PA</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -449,10 +453,6 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <hr/>
 <h5><a href='https://boards.greenhouse.io/bayada/jobs/4461397002'>Job Application for Speech Language Pathologist- Senior Living Communities at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Sterling, VA</span></p>
-<p>Posted on: 2019-10-02</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cortica/jobs/4460372002'>Job Application for Speech Language Pathologist at Cortica</a></h5> 
-<p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
 
